--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joi-pesel",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "PESEL validation rule for Joi",
   "main": "lib/index.ts",
   "scripts": {},
@@ -19,10 +19,6 @@
     "url": "https://github.com/MariuszBak/joi-pesel/issues"
   },
   "homepage": "https://github.com/MariuszBak/joi-pesel#readme",
-  "dependencies": {
-    "@hapi/joi": "^17.1.1"
-  },
-  "devDependencies": {
-    "@types/hapi__joi": "^17.1.6"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
